syntax = "proto3";

option optimize_for = LITE_RUNTIME;

package com.paulmandal.atak.forwarder.protobufs;

option java_outer_classname = "ProtobufNavCue";

import "route/minimal_trigger.proto";

message MinimalNavCue {
  string voice = 1; // TODO: mapping
  string id = 2;
  repeated MinimalTrigger trigger = 3;
}
