syntax = "proto3";

option optimize_for = LITE_RUNTIME;

package com.paulmandal.atak.forwarder.protobufs;

option java_outer_classname = "ProtobufNavCues";

import "route/minimal_nav_cue.proto";

message MinimalNavCues {
  repeated MinimalNavCue navCues = 1;
}
